# rust_trading

./: .gitignore  Cargo.toml  README.md
db/: create_user_fills_table.sql
examples/: create_pnl_graph.rs  info_request.rs  order_and_cancel.rs  sample_bot.rs  ws_usage.rs
examples/config/: sample_bot.toml
src/: lib.rs
src/bot_framework/: framework.rs  init.rs  mod.rs
src/hyperliquid/: db.rs  http.rs  mod.rs  model.rs  order.rs  portfolio.rs  subscriptions.rs  websocket.rs
src/utils/: discord.rs  logger.rs  mod.rs  time.rs
