[package]
name = "rust_trading"
version = "0.1.0"
edition = "2021"

[dependencies]
hyperliquid_rust_sdk = "0.5"
ethers = {version = "2.0.14", features = ["eip712", "abigen"]}
log = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
env_logger = "0.11"
uuid = { version = "1", features = ["serde"] }
chrono = "0.4"
dotenv = "0.15"